Add logos, some CSS / SCSS, start working on templating

--- a/src/_includes/head/css.html
+++ b/src/_includes/head/css.html
@@ -5,3 +5,8 @@
 	crossorigin="anonymous"
 />
 {% # Handle custom CSS files -%}
+{% # Look into proper SCSS handling, minifying, fingerprinting -%}
+<link
+	rel="stylesheet"
+	href="{{ '/assets/css/main.css' | url }}"
+/>
