--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -3,9 +3,10 @@
 <head>
 {% include "head.html" -%}
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 {% include "header.html" -%}
-<main>
+{% # Check if we want container-fluid for 100% width or just .container and pad everything -%}
+<main class="container-fluid">
 {{ content -}}
 </main>
 {% include "footer.html" -%} {% include "scripts.html" -%}
