Add bootstrap navbar short codes, start work on nav bar, need to do this with a loop

--- a/src/_includes/head/css.html
+++ b/src/_includes/head/css.html
@@ -2,11 +2,9 @@
 	rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
 	integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-	crossorigin="anonymous"
-/>
+	crossorigin="anonymous">
 {% # Handle custom CSS files -%}
 {% # Look into proper SCSS handling, minifying, fingerprinting -%}
 <link
 	rel="stylesheet"
-	href="{{ '/assets/css/main.css' | url }}"
-/>
+	href="{{ '/assets/css/main.css' | url }}">
